quote api and history scraper

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,3 +3,10 @@
 <%= link_to 'Private Journal', controller: 'entries' %>
 
 <%= link_to 'New entry', new_entry_path %>
+
+<p>
+  <%= @year %>
+</p>
+<p>
+  <%= @event %>
+</p>
