--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,5 +1,10 @@
 <h1>New Entry</h1>
 
+<blockquote>
+  <%= @quote %>
+  <footer><%= @author %></footer>
+</blockquote>
+
 <%= render 'form' %>
 
 <%= link_to 'Back', entries_path %>
