login or out link depending on status

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,3 +21,13 @@
   <%= f.submit 'Sign in' %>
   <%= link_to "Forgot your password?", new_password_path(:user) %>
 <% end %>
+
+<% if user_signed_in? %>
+  <li>
+  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+  </li>
+<% else %>
+  <li>
+  <%= link_to('Login', new_user_session_path)  %>
+  </li>
+<% end %>
